--- a/demo.html
+++ b/demo.html
@@ -145,6 +145,22 @@
  
 
 
+<br>
+<!-- BANNER CUADRADO -->
+<center>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3bd98f593f264ffcdca34117a8d01ece',
+		'format' : 'iframe',
+		'height' : 50,
+		'width' : 320,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/3bd98f593f264ffcdca34117a8d01ece/invoke.js"></scr' + 'ipt>');
+</script>
+</center>
+<!-- BANNER CUADRADO -->
+
     <div class="books">
       <h2><font size="4" style="color:red">Películas Estrenos</font></h2>
       <div class="carousel">
@@ -485,7 +501,7 @@ h1, h2 {
 
 html{
     font-size: 15px !important;
-    background: #000000;
+    background: #121212;
 }
 
 .search {
@@ -705,3 +721,45 @@ small, .book-wrapper p {
   opacity: 0.7;
 }
 </style>
+<!-- BANNER CUADRADO -->
+<center>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'bfa568637f71decff736540c584a3211',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformats.com/bfa568637f71decff736540c584a3211/invoke.js"></scr' + 'ipt>');
+</script>
+</center>
+<!-- BANNER CUADRADO -->
+  
+<br>
+<center><script id="_wautas">var _wau = _wau || []; _wau.push(["small", "je8x3lrrfj", "tas"]);</script><script async src="//waust.at/s.js"></script></center><br>
+<!-- Codigo para blokear adblock inicio --> 
+<style type='text/css'>
+/* Animation */
+@keyframes fadeInDown{0%{opacity:0;transform:translateY(-20px)}100%{opacity:1;transform:translateY(0)}}
+@keyframes rubberBand{from{transform:scale3d(1,1,1)}30%{transform:scale3d(1.25,0.75,1)}40%{transform:scale3d(0.75,1.25,1)}50%{transform:scale3d(1.15,0.85,1)}65%{transform:scale3d(.95,1.05,1)}75%{transform:scale3d(1.05,.95,1)}to{transform:scale3d(1,1,1)}}
+/* Say Hi to Adblock */
+#arlinablock{background:rgba(0,0,0,0.65);position:fixed;margin:auto;left:0;right:0;top:0;bottom:0;overflow:auto;z-index:999999;animation:fadeInDown 1s}
+#arlinablock .header{margin:0 0 15px 0}
+#arlinablock .inner{background:#e3482d;color:#fff;box-shadow:0 5px 20px rgba(0,0,0,0.1);text-align:center;width:600px;padding:40px;border-radius:5px;margin:7% auto 2% auto;animation:rubberBand 1s}
+#arlinablock button{padding:10px 20px;border:0;background:rgba(0,0,0,0.15);color:#fff;margin:20px 5px;cursor:pointer;transition:all .3s}
+#arlinablock button:hover{background:rgba(0,0,0,0.35);color:#fff;outline:none}
+#arlinablock button.active,#arlinablock button:hover.active{background:#fff;color:#222;outline:none}
+#arlinablock .fixblock{background:#fff;text-align:left;color:#000;padding:20px;height:250px;overflow:auto;line-height:30px}
+#arlinablock .fixblock div{display:none}
+#arlinablock .fixblock div.active{display:block}
+#arlinablock ol{margin-left:20px}
+@media(max-width:768px){#arlinablock .inner{width:calc(100% - 20px);margin:10px auto;padding:15px}}
+</style>
+<script type='text/javascript'>
+//<![CDATA[
+// Say Hi to Adblock
+function downloadJSAtOnload(){var e=document.createElement("script");e.src="https://imparteconocimientos.com/recursos/Anti-AdBlocker.js",document.body.appendChild(e)}window.addEventListener?window.addEventListener("load",downloadJSAtOnload,!1):window.attachEvent?window.attachEvent("onload",downloadJSAtOnload):window.onload=downloadJSAtOnload;
+//]]>
+</script>
+<!-- Codigo para blokear adblock fin -->  
