--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,46 @@
+<style>
+header {
+  background: #000000;
+  width: 96%;
+  position: sticky;
+  z-index: 100;
+  padding-left:15px;
+  padding-top:5px;
+  padding-bottom:8px;
+}
+
+nav {
+  float: right;
+  padding-right:10px;
+  display: table;
+
+}
+
+nav ul li {
+  float: left;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  padding: 8px;
+
+}
+
+</style>
+    <script src="https://kit.fontawesome.com/d0e2d731d5.js" crossorigin="anonymous"></script>
+
+<header>
+<a href="go:inicio"><img class="logo" src="https://i.ibb.co/PGYK0p7/logocnt.png" width=100px;></a>
+    <nav>
+        <ul>
+  <a href="http://action_share"><li class="fa-solid fa-share-nodes"></li></a>
+  <a href="http://action_search"><li class="fa-solid fa-magnifying-glass"></li></a>
+  <a href="http://action_exit"><li class="fa-solid fa-right-from-bracket"></li></a>
+	</ul>
+    </nav>
+</header>
+
 <div class="">
   <div class="">
-    <div class="header">
-    </div>
+
 
     <div class="books">
       <h2><font size="4" style="color:red">Contenido Principal</font></h2>
@@ -548,7 +587,7 @@ html{
 }
 
 .books h2 {
-  padding: 0 30px;
+  padding: 0 20px;
 }
 
 .carousel {
@@ -556,7 +595,7 @@ html{
   display: inline-flex;
   white-space: nowrap;
   overflow: auto;
-  padding: 0 20px 0 30px;
+  padding: 0 20px 0 20px;
   box-sizing: border-box;
 }
 
