--- a/demo.html
+++ b/demo.html
@@ -24,19 +24,24 @@ nav ul li {
 
 }
 
+
 </style>
     <script src="https://kit.fontawesome.com/d0e2d731d5.js" crossorigin="anonymous"></script>
 
 <header>
-<a href="go:inicio"><img class="logo" src="https://i.ibb.co/PGYK0p7/logocnt.png" width=100px;></a>
+<a href="go:inicio"><img class="logo" src="https://i.ibb.co/LdWgw70/logom90.png" width=100px;></a>
     <nav>
         <ul>
-  <a href="http://action_share"><li class="fa-solid fa-share-nodes"></li></a>
-  <a href="http://action_search"><li class="fa-solid fa-magnifying-glass"></li></a>
-  <a href="http://action_exit"><li class="fa-solid fa-right-from-bracket"></li></a>
+  <a href="http://action_share"><li style="color:red" class="fa-solid fa-share-nodes"></li></a>
+  <a href="http://action_search"><li style="color:red" class="fa-solid fa-magnifying-glass"></li></a>
+  <a href="http://action_exit"><li style="color:red" class="fa-solid fa-right-from-bracket"></li></a>
 	</ul>
     </nav>
 </header>
+
+
+
+<marquee style="color:white;padding-top:10px;">Si deseas adquirir cuentas streaming a buen precio y con garantía, escríbenos en WhatsApp 0988750716 (Solo Ecuador)</marquee>
 
 <div class="">
   <div class="">
@@ -204,83 +209,107 @@ nav ul li {
       <h2><font size="4" style="color:red">Películas Estrenos</font></h2>
       <div class="carousel">
 
+
+
+
+
+
+
+
+
         <div class="book">
           <div class="cover">
-            <a href="go:peli19"><img style="border-radius: 14px;" src="https://i.ibb.co/t8bmVck/peli19.jpg"/></a>
+            <a href="go:peli15"><img style="border-radius: 14px;" src="https://i.ibb.co/RNMwGm3/flash.jpg"/></a>
+          </div>
+        </div>
+
+
+        <div class="book">
+          <div class="cover">
+            <a href="go:peli19"><img style="border-radius: 14px;" src="https://i.ibb.co/9yW77zQ/across.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli18"><img style="border-radius: 14px;" src="https://i.ibb.co/R60nZWf/p3li18.png"/></a>
+            <a href="go:peli16"><img style="border-radius: 14px;" src="https://i.ibb.co/swzXXYr/extraction.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli17"><img style="border-radius: 14px;" src="https://i.ibb.co/5ntcy9g/peli17.png"/></a>
+            <a href="go:peli18"><img style="border-radius: 14px;" src="https://i.ibb.co/fQhYmbx/transfor.jpg"/></a>
+          </div>
+        </div>
+
+
+        <div class="book">
+          <div class="cover">
+            <a href="go:peli13"><img style="border-radius: 14px;" src="https://i.ibb.co/m09SfS5/sirena.jpg"/></a>
+          </div>
+        </div>
+
+
+        <div class="book">
+          <div class="cover">
+            <a href="go:peli12"><img style="border-radius: 14px;" src="https://i.ibb.co/gwBL87j/jhon4.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli16"><img style="border-radius: 14px;" src="https://i.ibb.co/6R90GkL/peli16.jpg"/></a>
+            <a href="go:peli17"><img style="border-radius: 14px;" src="https://i.ibb.co/mq3TLZt/rapido10.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli15"><img style="border-radius: 14px;" src="https://i.ibb.co/2qFqtPt/peli15.jpg"/></a>
+            <a href="go:peli11"><img style="border-radius: 14px;" src="https://i.ibb.co/BfpHL7f/peli11.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli14"><img style="border-radius: 14px;" src="https://i.ibb.co/N6nCRt0/peli14.jpg"/></a>
+            <a href="go:peli10"><img style="border-radius: 14px;" src="https://i.ibb.co/dfDkLJX/peli10.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli13"><img style="border-radius: 14px;" src="https://i.ibb.co/4JFWnPJ/peli13.jpg"/></a>
+            <a href="go:peli2"><img style="border-radius: 14px;" src="https://i.ibb.co/1bht0bt/peli2.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli12"><img style="border-radius: 14px;" src="https://i.ibb.co/vkVkrQn/peli12.jpg"/></a>
+            <a href="go:peli23"><img style="border-radius: 14px;" src="https://i.ibb.co/M5TxZJZ/peli23.jpg"/></a>
+          </div>
+        </div>      
+
+        <div class="book">
+          <div class="cover">
+            <a href="go:peli22"><img style="border-radius: 14px;" src="https://i.ibb.co/jwRjHNd/peli22.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli11"><img style="border-radius: 14px;" src="https://i.ibb.co/CPyhkGd/peli11.jpg"/></a>
+            <a href="go:peli21"><img style="border-radius: 14px;" src="https://i.ibb.co/DWXbNtJ/peli21.jpg"/></a>
           </div>
         </div>
 
         <div class="book">
           <div class="cover">
-            <a href="go:peli10"><img style="border-radius: 14px;" src="https://i.ibb.co/JySRr6M/peli10.png"/></a>
+            <a href="go:peli20"><img style="border-radius: 14px;" src="https://i.ibb.co/C87R5Yw/peli20.jpg"/></a>
           </div>
         </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:peli1"><img style="border-radius: 14px;" src="https://i.ibb.co/f2N71s1/peli1.png"/></a>
-          </div>
-        </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:peli2"><img style="border-radius: 14px;" src="https://i.ibb.co/dr0Z2wT/peli2.jpg"/></a>
-          </div>
-        </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:peli3"><img style="border-radius: 14px;" src="https://i.ibb.co/nLpM0Yz/peli3.jpg"/></a>
-          </div>
-        </div>
+
+
+
+
 
         <div class="book">
           <div class="cover">
@@ -306,23 +335,11 @@ nav ul li {
           </div>
         </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:peli8"><img style="border-radius: 14px;" src="https://i.ibb.co/mvHDH6X/peli8.jpg"/></a>
-          </div>
-        </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:peli9"><img style="border-radius: 14px;" src="https://i.ibb.co/v12X7BK/peli9.png"/></a>
-          </div>
-        </div>
 
-        <div class="book">
-          <div class="cover">
-            <a href="go:estre2"><img style="border-radius: 14px;" src="https://i.ibb.co/VHQdWvy/maspelis.png"/></a>
-          </div>
-        </div>
+
+
+
    
         </div>
       </div>
@@ -777,6 +794,7 @@ small, .book-wrapper p {
   
 <br>
 <center><script id="_wautas">var _wau = _wau || []; _wau.push(["small", "je8x3lrrfj", "tas"]);</script><script async src="//waust.at/s.js"></script></center><br>
+
 <!-- Codigo para blokear adblock inicio --> 
 <style type='text/css'>
 /* Animation */
