--- a/demo.html
+++ b/demo.html
@@ -41,7 +41,7 @@ nav ul li {
 
 
 
-<marquee style="color:white;padding-top:10px;">Si deseas adquirir cuentas streaming a buen precio y con garantía, escríbenos en WhatsApp 0988750716 (Solo Ecuador)</marquee>
+<marquee style="color:white;padding-top:10px;">Si deseas adquirir cuentas streaming originales y a buen precio, escríbenos en WhatsApp 0988750716 (Disponible solo para Ecuador)</marquee>
 
 <div class="">
   <div class="">
